Support Android 6.0 properly